Various linguistic clean-up.
Fixed several instances of direct translations from English.

--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-21 16:13+0300\n"
-"PO-Revision-Date: 2007-07-29 08:58+0100\n"
+"PO-Revision-Date: 2007-07-29 09:13+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -184,7 +184,7 @@ msgstr "PROGRAMFEL"
 # type: Plain text
 #: ../../man/822-date.1:27
 msgid "This facility really ought to be part of B<date>(1)."
-msgstr "Denna funktion borde ingå i B<date>(1)."
+msgstr "Funktionen borde ingå i B<date>(1)."
 
 # type: SH
 #: ../../man/822-date.1:28 ../../man/cleanup-info.8:51 ../../man/deb.5:67
@@ -626,7 +626,7 @@ msgid ""
 "The value of this field determines the package name, and is used to generate "
 "file names by most installation tools."
 msgstr ""
-"Värdet på detta fält bestämmer paketets namn, och används av de flesta "
+"Värdet på fältet bestämmer paketets namn, och används av de flesta "
 "installationsverktygen för att generera filnamnen."
 
 # type: TP
@@ -759,7 +759,7 @@ msgid ""
 "other installation tool will not allow an B<Essential> package to be removed "
 "(at least not without using one of the force options)."
 msgstr ""
-"Detta fältet krävs normalt sett endast om svaret är \"yes\" (ja), och "
+"Fältet krävs normalt sett endast om svaret är \"yes\" (ja), och "
 "betecknar att paketet krävs för en korrekt installation av systemet. Dpkg "
 "och andra installationsverktyg tillåter inte att ett paket märkt "
 "B<Essential> tas bort (åtminstone inte utan att använda en av de tvingande "
@@ -798,7 +798,7 @@ msgid ""
 "The name of the source package that this binary package came from, if "
 "different than the name of the package itself."
 msgstr ""
-"Namnet på det källkodspaket som detta binärpaket kommer från, om det skiljer "
+"Namnet på det källkodspaket som binärpaketet kommer från, om det skiljer "
 "sig från namnet på själva paketet."
 
 # type: TP
@@ -817,7 +817,7 @@ msgid ""
 "run the postinst scripts of packages listed in Depends: fields before those "
 "of the packages which depend on them, and run prerm scripts before."
 msgstr ""
-"Lista över paket som krävs för att detta paket för att tillhandahålla en "
+"Lista över paket som krävs för att paketet skall kunna tillhandahålla en "
 "icke-trivial mängd funktionalitet. Pakethanteringsprogramvaran kommer inte "
 "tillåta att ett paket installeras om paketen som listas i B<Depends>-fältet "
 "inte är installerade (åtminstone inte utan att använda en av de tvingande "
@@ -838,7 +838,7 @@ msgid ""
 "requires another package for running its preinst script."
 msgstr ""
 "Lista över paket som måste vara installerade B<och> konfigurerade innan "
-"detta kan installeras. Detta används normalt i de fall paketet kräver att "
+"paketet kan installeras. Detta används normalt i de fall paketet kräver att "
 "ett annat paket är installerat för sitt preinst-skript."
 
 # type: TP
@@ -854,7 +854,7 @@ msgid ""
 "installations. The package maintenance software will warn the user if they "
 "install a package without those listed in its B<Recommends> field."
 msgstr ""
-"Lista över paket som bör installeras tillsammans med detta i de allra flesta "
+"Lista över paket som bör installeras tillsammans med paketet i de allra flesta "
 "fall.  Pakethanteringsprogramvaran kommer att varna användaren om hen "
 "installerar ett paket utan de som listas i B<Recommends>-fältet."
 
@@ -871,9 +871,9 @@ msgid ""
 "usefulness, but without which installing this package is perfectly "
 "reasonable."
 msgstr ""
-"Lista över paket som är relaterade till detta och som kanske kan göra det "
+"Lista över paket som är relaterade till paketet och som kanske kan göra det "
 "mer användbart, men utan vilka det fortfarande är rimligt att installera "
-"detta paket."
+"paketet."
 
 # type: Plain text
 #: ../../man/deb-control.5:132
@@ -941,10 +941,10 @@ msgid ""
 "usually used with the B<Conflicts> field to force removal of the other "
 "package, if this one also has the same files as the conflicted package."
 msgstr ""
-"Lista över paket som filer från denna ersätter. Detta används för att "
+"Lista över paket ersätts av filer från det här paketet. Detta används för att "
 "möjliggöra paket att skriva över filer från andra paket, och används normalt "
 "sett tillsammans med B<Conflicts>-fältet för att tvinga fram borttagning av "
-"det andra paketet om även detta har de filer som finns i paketet det står i "
+"det andra paketet om även det här har de filer som finns i paketet det står i "
 "konflikt med."
 
 # type: TP
@@ -965,7 +965,7 @@ msgid ""
 "having to know the package names for all of them, and using `|' to separate "
 "the list."
 msgstr ""
-"Detta är en lista av virtuella paket som detta tillhandahåller. Normalt sett "
+"Detta är en lista av virtuella paket som tillhandahålls av detta. Normalt sett "
 "används detta i de fall flera paket tillhandahåller samma tjänst. Till "
 "exempel kan både sendmail och exim fungera som e-postserver, så de "
 "tillhandahåller ett gemensamt paket (\"mail-transport-agent\") på vilket "
@@ -1571,7 +1571,7 @@ msgid ""
 "line options and package states in more detail than that provided by B<dpkg "
 "--help>."
 msgstr ""
-"Denna manual är avsedd för användare som vill få en mer detaljerad "
+"Manualen är avsedd för användare som vill få en mer detaljerad "
 "förståelse för B<dpkg>s kommandoradsflaggor och pakettillstånd än vad som "
 "berättas med B<dpkg --help>."
 
@@ -1804,7 +1804,7 @@ msgid ""
 "to do that with option B<--force-hold>."
 msgstr ""
 "Ett paket som är markerat med B<håll> hanteras inte av B<dpkg> såvida inte "
-"detta framtvingas med flaggan B<--force-hold>."
+"det framtvingas med flaggan B<--force-hold>."
 
 # type: TP
 #: ../../man/dpkg.1:86
@@ -1820,7 +1820,7 @@ msgid ""
 "reinstreq>."
 msgstr ""
 "Ett paket markerat B<ominstallation krävs> är trasigt och kräver "
-"ominstallation. Dessa paket kan inte tas bort, såvida inte detta framtvingas "
+"ominstallation. Dessa paket kan inte tas bort, såvida inte det framtvingas "
 "med flaggan B<--force-remove-reinstreq>."
 
 # type: SH
@@ -1897,7 +1897,7 @@ msgid ""
 "about how this is done."
 msgstr ""
 "B<6.> Konfigurera paketet. Se B<--configure> för detaljerad information om "
-"hur detta görs."
+"hur man gör det."
 
 # type: TP
 #: ../../man/dpkg.1:124
@@ -2202,7 +2202,7 @@ msgid ""
 "are not reset for subsequent commands executed during the same run."
 msgstr ""
 "Läser en följd av kommandon från indatafilhandtag I<E<lt>nE<gt>>. Observera: "
-"Ytterligare flaggor som sätts på kommandoraden, och genom detta filhandtag, återställs "
+"Ytterligare flaggor som sätts på kommandoraden, och genom filhandtaget, återställs "
 "inte för kommandon som körs i en följd under samma körning."
 
 # type: Plain text
@@ -2377,7 +2377,7 @@ msgid ""
 "package."
 msgstr ""
 "När ett paket tas bort är det möjligt att ett annat paket beror på det "
-"borttagna paketet. Om du anger denna flagga kommer de paket som beror på det "
+"borttagna paketet. Om du anger flaggan kommer de paket som beror på det "
 "borttagna paketet automatiskt att avkonfigureras."
 
 # type: TP
@@ -2862,7 +2862,7 @@ msgid ""
 "changes where I<E<lt>decisionE<gt>> is either install or keep."
 msgstr ""
 "Logga statusändringsmeddelanden och kommandon på I<filnamn>, istället för "
-"förvalet I</var/log/dpkg.log>. Om denna flagga ges flera gånger används det "
+"förvalet I</var/log/dpkg.log>. Om flaggan ges flera gånger används det "
 "sista filnamnet. Loggmeddelanden är på formen \"ÅÅÅÅ-MM-DD HH:MM:SS status "
 "E<lt>tillståndE<gt> E<lt>paketE<gt> E<lt>installerad-versionE<gt>\" för "
 "statusändringar; \"ÅÅÅÅ-MM-DD HH:MM:SS E<lt>kommandoE<gt> E<lt>paketE<gt> "
@@ -3121,7 +3121,7 @@ msgstr "     B<dpkg --get-selections E<gt>mitturval>\n"
 msgid ""
 "You might transfer this file to another computer, and install it there with:"
 msgstr ""
-"Du kan överföra denna fil till en annan dator och installera den där genom "
+"Du kan överföra filen till en annan dator och installera den där genom "
 "att skriva:"
 
 # type: Plain text
@@ -3905,7 +3905,7 @@ msgid ""
 "except for the leading dashes which are not used here. Comments are allowed "
 "by starting a line with a hash sign (\"B<#>\")."
 msgstr ""
-"Denna fil innehåller förvalda inställningar för dpkg. Varje rad består av en "
+"Filen innehåller förvalda inställningar för dpkg. Varje rad består av en "
 "ensam flagga som är exakt densamma som en normal kommandoradsflagga för "
 "dpkg, förutom de inledande bindestrecken vilka inte används här. Kommentarer "
 "är tillåtna genom att inleda en rad med nummertecken (\"B<#>\")."
@@ -4698,7 +4698,7 @@ msgid ""
 "to extract a particular file from a package archive."
 msgstr ""
 "Extraherar filsystemsträdsdata från ett binärt paket och sänder det till "
-"standard ut i B<tar>-format. Tillsammans med B<tar>(1) kan detta användas "
+"standard ut i B<tar>-format. Tillsammans med B<tar>(1) kan det användas "
 "för att hämta ut en enskild fil från ett paketarkiv."
 
 # type: Plain text
@@ -4778,7 +4778,7 @@ msgstr ""
 # type: Plain text
 #: ../../man/dpkg-deb.1:189
 msgid "The default for this field is \"${Package}\\et${Version}\\en\"."
-msgstr "Förvalet för detta fält är \"${Package}\\et${Version}\\en\"."
+msgstr "Förvalet för fältet är \"${Package}\\et${Version}\\en\"."
 
 # type: TP
 #: ../../man/dpkg-deb.1:189
@@ -4848,7 +4848,7 @@ msgid ""
 msgstr ""
 "Förhindrar B<dpkg-deb --build s> normala tester på det föreslagna innehållet "
 "i arkivet. Du kan bygga vilket arkiv du än vill, oavsett hur trasigt, på "
-"detta sätt."
+"det här sätt."
 
 # type: TP
 #: ../../man/dpkg-deb.1:217
@@ -5789,7 +5789,7 @@ msgid ""
 "and is not easily machine-readable. See B<-W> (B<--show>)  and B<--"
 "showformat> for a way to configure the output format."
 msgstr ""
-"Utdataformatet för detta alternativ kan inte justeras, men varieras "
+"Utdataformatet för den här flaggan kan inte justeras, men varieras "
 "automatiskt för att passa terminalbredden. Det är avsett för mänskliga "
 "läsare, och är inte enkelt maskinläsbart. Se B<-W> (B<--show>) och B<--"
 "showformat> för hur du konfigurerar utdataformatet."
@@ -5809,8 +5809,8 @@ msgid ""
 "package, each line having the name and installed version of the package, "
 "separated by a tab."
 msgstr ""
-"Precis som flaggan B<--list> kommer detta att visa alla paket som matchar "
-"det givna mönstret. Utdatat kan dock skräddarsys med flaggan B<--"
+"Precis som flaggan B<--list> kommer att paket som matchar det givna "
+"mönstret att visas. Utdatat kan dock skräddarsys med flaggan B<--"
 "showformat>. Standardutdataformatet är en rad per paket som träffas, där "
 "varje rad innehåller namn och installerad version av paketet, avdelat med "
 "ett tabulatortecken."
@@ -6018,7 +6018,7 @@ msgid ""
 "This setting influences the output of the B<--list> option by changing the "
 "width of its output."
 msgstr ""
-"Denna inställningar påverkar utdata från kommandot B<--list> genom att ändra "
+"Inställningen påverkar utdata från kommandot B<--list> genom att ändra "
 "bredden på dess utdata."
 
 # type: Plain text
@@ -6918,7 +6918,7 @@ msgid ""
 "saying so instead (but still on standard output)."
 msgstr ""
 "Skriver ut information, i människoläsbar form, om delfilerna som anges. "
-"Parametrar som inte är delar av binärpaket resulterar i ett meddelande som "
+"Argument som inte är delar av binärpaket resulterar i ett meddelande som "
 "talar om detta (men fortfarande på standard ut)."
 
 # type: Plain text
@@ -7016,7 +7016,7 @@ msgid ""
 "This discards parts from the queue of those waiting for the remaining parts "
 "of their packages."
 msgstr ""
-"Detta kastar bort delar från kön över de som väntar på återstående delar av "
+"Kastar bort delar från kön över de som väntar på återstående delar av "
 "paket."
 
 # type: Plain text
@@ -7075,7 +7075,7 @@ msgid ""
 "This overrides the default for a manual reassembly (B<--join>)  and is "
 "mandatory for an automatic queue-or-reassemble (B<--auto>)."
 msgstr ""
-"Detta används istället för förvalet vid manuell sammanslagning (B<--join>) "
+"Används istället för förvalet vid manuell sammanslagning (B<--join>) "
 "och krävs för automatisk köa-eller-sammanslå (B<--auto>)."
 
 # type: TP
@@ -7094,7 +7094,7 @@ msgid ""
 msgstr ""
 "Vid automatisk köa-eller-sammanslå skriver B<dpkg-split> normalt ett "
 "meddelande om den matas med en I<del> som inte är en binär paketdel. Denna "
-"flagga undertrycker detta meddelande, vilket gör det möjligt för program "
+"flagga undertrycker meddelandet, vilket gör det möjligt för program "
 "såsom B<dpkg> att hantera både delade och odelade paket utan att producera "
 "felaktiga meddelanden."
 
@@ -7117,7 +7117,7 @@ msgid ""
 "or the one supplied as an argument: alphanumerics are lowercased, plus signs "
 "are replaced by B<x>'s and all other characters are discarded."
 msgstr ""
-"Detta misshandlar prefixet - antingen förvalet taget från indatafilnamnet, "
+"Misshandlar prefixet - antingen förvalet taget från indatafilnamnet, "
 "eller det som angetts som parameter: alfanumeriska tecken görs till gemener, "
 "plustecken ersätts med B<x> och alla andra tecken kastas."
 
@@ -7225,7 +7225,7 @@ msgid ""
 "split> and are unlikely to be useful to other programs, and in any case the "
 "filename format should not be relied upon."
 msgstr ""
-"Filnamnen som används i denna katalog är i ett internt format för B<dpkg-"
+"Filnamnen som används i katalogen är i ett internt format för B<dpkg-"
 "split> och är knappast användbara för andra program, och hur som helst kan "
 "inte formatet på filnamnen litas på."
 
@@ -7591,7 +7591,7 @@ msgid ""
 "In the list of packages, the text indicating the current state of each "
 "package."
 msgstr ""
-"I listan över paket är detta texten som anger aktuellt tillstånd för varje "
+"I listan över paket är det här texten som anger aktuellt tillstånd för varje "
 "paket."
 
 # type: TP
@@ -7606,7 +7606,7 @@ msgid ""
 "In the list of packages, the text indicating the current state of the "
 "currently selected package."
 msgstr ""
-"I listan över paket är detta texten som anger aktuellt tillstånd för det nu "
+"I listan över paket är det här texten som anger aktuellt tillstånd för det nu "
 "markerade paketet."
 
 # type: TP
@@ -7846,7 +7846,7 @@ msgid ""
 "the unresolved depends or conflicts."
 msgstr ""
 "När en konflikt eller ett misslyckat beroende upptäcks visas en delskärm med "
-"möjlighet att lösa beroendet.  På denna skärm visas en lista över "
+"möjlighet att lösa beroendet. På denna skärm visas en lista över "
 "motstridiga eller beroende paket, och för varje paket som listas visas dess "
 "orsak. Användaren kan applicera de av B<dselect> rekommenderade ändringarna, "
 "själv ändra dem, eller backa alla ändringar, inklusive de som gjorde att de "
@@ -7903,7 +7903,7 @@ msgstr ""
 "eller lösas. Om problemet kvarstår eller den installation som genomfördes "
 "var felaktig, ber vi dig undersöka orsaken och omständigheterna och "
 "rapportera ett fel i Debians felrapporteringssystem. Instruktioner om hur "
-"detta görs finns på http://bugs.debian.org/ eller genom att läsa "
+"du gör det finns på http://bugs.debian.org/ eller genom att läsa "
 "dokumentationen för B<bug>(1) eller B<reportbug>(1), om dessa är "
 "installerade."
 
@@ -8336,8 +8336,8 @@ msgid ""
 "screen, making them very hard to handle. In practice, only hold and unhold "
 "operations are useful when applied to groups."
 msgstr ""
-"Nödvändiga försiktighetsåtgärder skall tas när ändringar görs på stora "
-"gruppmarkeringar, eftersom detta med en gång kan ge stora mängder "
+"Nödvändiga försiktighetsåtgärder bör tas när ändringar görs på stora "
+"gruppmarkeringar, eftersom det med en gång kan ge stora mängder "
 "otillfredsställda beroenden eller konflikter, vilka alla kommer att visas på "
 "en beroendelösningsskärm, vilket gör dem mycket svåra att hantera. I "
 "praktiken är bara håll-kommandot och dess motsats användbara på grupper."
@@ -8369,7 +8369,7 @@ msgid ""
 "the depends or conflicts that cause the currently selected package to be "
 "listed."
 msgstr ""
-"Övre halvan av denna skärm listar alla paket som har otillfredsställda "
+"Övre halvan av skärmen listar alla paket som har otillfredsställda "
 "beroenden eller konflikter som ett resultat av ändringen som efterfrågas, "
 "samt alla paket vars installation kan lösa något av dessa beroenden, eller "
 "vars borttagning kan lösa någon av konflikterna. Den nedre halvan visar som "
@@ -8512,7 +8512,7 @@ msgid ""
 "This manual page was written by Juho Vuori E<lt>javuori@cc.helsinki.fiE<gt>, "
 "Josip Rodin and Joost kooij."
 msgstr ""
-"Denna manualsida skrevs av Juho Vuori E<lt>javuori@cc.helsinki.fiE<gt>, "
+"Manualsidan skrevs av Juho Vuori E<lt>javuori@cc.helsinki.fiE<gt>, "
 "Josip Rodin och Joost Kooij."
 
 # type: TH
@@ -8534,7 +8534,7 @@ msgid ""
 "except for the leading dashes which are not used here. Comments are allowed "
 "by starting a line with a hash sign (\"B<#>\")."
 msgstr ""
-"Denna fil innehåller förvalda inställningar för dselect. Varje rad består av "
+"Filen innehåller förvalda inställningar för dselect. Varje rad består av "
 "en ensam flagga som är exakt densamma som en normal kommandoradsflagga för "
 "dselect, förutom de inledande bindestrecken vilka inte används här. "
 "Kommentarer är tillåtna genom att inleda en rad med nummertecken (\"B<#>\")."
@@ -9106,7 +9106,7 @@ msgid ""
 "Check for processes that are instances of this executable (according to B</"
 "proc/>I<pid>B</exe>)."
 msgstr ""
-"Sök efter processer som är instanser av denna programfil (enligt B</proc/"
+"Sök efter processer som är instanser av programfilen (enligt B</proc/"
 ">I<pid>B</exe>)."
 
 # type: TP
@@ -9302,10 +9302,10 @@ msgid ""
 "is only for groups that the user isn't normally a member of (like adding per "
 "process group membership for generic users like B<nobody>)."
 msgstr ""
-"Byt till detta användarnamn/användar-id innan processen startas. Du kan även "
+"Byt till användarnamnet/användar-id:t innan processen startas. Du kan även "
 "ange en grupp genom att lägga till ett kolontecken, B<:>, följt av "
 "gruppnamnet eller grupp-id på samma sätt som du skull gjort till \"chown\"-"
-"kommandot (I<användare>B<:>I<grupp). När du använder detta alternativ måste "
+"kommandot (I<användare>B<:>I<grupp). När du använder alternativet måste "
 "du ha i åtanke att även både primär och tilläggs-grupp sätts, även om >B<--"
 "group>-flaggan inte anges. B<--group>-flaggan är bara till för grupper som "
 "användaren normalt inte är en medlem i (t.ex för att lägga till "
@@ -9368,7 +9368,7 @@ msgstr ""
 "B<någon som helst> anledning misslyckas med att exekvera. Detta är en sista "
 "utväg, och är endast avsett för program som det antingen inte är någon "
 "mening att förgrena på egen hand, eller där det inte är möjligt att lägga till "
-"kod för detta på egen hand."
+"kod för det på egen hand."
 
 # type: TP
 #: ../../man/start-stop-daemon.8:217
