--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-21 16:13+0300\n"
-"PO-Revision-Date: 2007-07-29 09:13+0100\n"
+"PO-Revision-Date: 2007-07-29 09:20+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -168,7 +168,7 @@ msgstr "FLAGGOR"
 # type: Plain text
 #: ../../man/822-date.1:23
 msgid "B<822-date> does not take any arguments or options."
-msgstr "B<822-date> tar inga flaggor eller parametrar."
+msgstr "B<822-date> tar inga argument eller flaggor."
 
 # type: SH
 #: ../../man/822-date.1:24 ../../man/cleanup-info.8:48
@@ -1612,7 +1612,7 @@ msgid ""
 msgstr ""
 "B<dpkg> kan även användas som ett skal runt B<dpkg-deb>(1). Följande är "
 "åtgärder för B<dpkg-deb>, och om de upptäcks kör B<dpkg> helt enkelt B<dpkg-"
-"deb> med de flaggor som angivits:"
+"deb> med de parametrar som angivits:"
 
 # type: Plain text
 #: ../../man/dpkg.1:40
@@ -2459,7 +2459,7 @@ msgstr ""
 # type: Plain text
 #: ../../man/dpkg.1:341
 msgid "B<all>: Turns on (or off) all force options."
-msgstr "B<all>: Slår på (eller av) alla tvingande parametrar."
+msgstr "B<all>: Slår på (eller av) alla tvingande flaggor."
 
 # type: Plain text
 #: ../../man/dpkg.1:344
@@ -2689,7 +2689,7 @@ msgid ""
 "actually modifying anything."
 msgstr ""
 "Gör allting som efterfrågas, men skriv inte några ändringar. Detta används "
-"för att se vad som skulle ha hänt med givna parametrar utan att faktiskt "
+"för att se vad som skulle ha hänt med åtgärden utan att faktiskt "
 "ändra något."
 
 # type: Plain text
@@ -2719,7 +2719,7 @@ msgid ""
 "B<-i>, B<-A>, B<--install>, B<--unpack> and B<--avail> actions."
 msgstr ""
 "Hantera alla vanliga filer som matchar sökmönstret B<*.deb> rekursivt i de "
-"kataloger som anges, med alla sina underkataloger. Denna flagga kan användas "
+"kataloger som anges, med alla sina underkataloger. Flaggan kan användas "
 "tillsammans med B<-i>, B<-A>, B<--install>, B<--unpack> och B<--avail>."
 
 # type: TP
@@ -2768,11 +2768,9 @@ msgid ""
 "the scripts see B<instdir> as a root directory.  (Defaults to I</>)"
 msgstr ""
 "Ändra standardinstallationskatalog, vilket anger katalogen där paket skall "
-"installeras. B<instdir> är även den katalog "
-"som skickas som parameter till B<chroot>(2) innan paketets "
-"installationsfiler körs, vilket betyder att skripten ser B<instdir> som "
-"rotkatalog. (Förval är I</>)"
-""
+"installeras. B<instdir> är även katalogen som skickas som argument till "
+"B<chroot>(2) innan paketets installationsfiler körs, vilket betyder att "
+"skripten ser B<instdir> som rotkatalog. (Förval är I</>)"
 
 # type: TP
 #: ../../man/dpkg.1:465
@@ -2835,7 +2833,7 @@ msgid ""
 "`status: conffile-prompt: conffile : 'current-conffile' 'new-conffile' "
 "useredited distedited'."
 msgstr ""
-"Sänder paketstatusinformation till filhandtag I<E<lt>nE<gt>>. Denna flagga "
+"Sänder paketstatusinformation till filhandtag I<E<lt>nE<gt>>. Flaggan "
 "kan ges flera gånger. Statusuppdateringar ges på formen \"status: "
 "E<lt>paketE<gt>: E<lt>pakettillståndE<gt>\". Fel rapporteras på formen "
 "\"status: E<lt>paketE<gt>: error: utökat-felmeddelande\". "
@@ -2937,7 +2935,7 @@ msgid ""
 "a package is marked for removing or not, whether it is installed or not, "
 "etc. See section B<INFORMATION ABOUT PACKAGES> for more info."
 msgstr ""
-"Status för tillgängliga paket. Denna fil innehåller information om huruvida "
+"Status för tillgängliga paket. Filen innehåller information om huruvida "
 "ett paket är markerat för borttagning eller ej, om det är installerat eller "
 "ej, osv. Se sektionen B<INFORMATION OM PAKET> för ytterligare information."
 
@@ -4466,7 +4464,7 @@ msgid ""
 "want to pass to B<dpkg-deb>. B<dpkg> will spot that you wanted B<dpkg-deb> "
 "and run it for you."
 msgstr ""
-"Du kan även starta B<dpkg-deb> genom att anropa B<dpkg> med de parametrar du "
+"Du kan även starta B<dpkg-deb> genom att anropa B<dpkg> med de flaggor du "
 "vill sända till B<dpkg-deb>. B<dpkg> kommer upptäcka att du ville åt B<dpkg-"
 "deb> och kör det åt dig."
 
@@ -4487,7 +4485,7 @@ msgid ""
 msgstr ""
 "Skapar ett Debianarkiv från filsystemsträdet som lagras i I<katalog>. "
 "I<katalog> måste innehålla underkatalogen B<DEBIAN>, vilken innehåller "
-"styrinformationsfiler såsom själv styrfilen control. Denna katalog kommer "
+"styrinformationsfiler såsom själv styrfilen control. Katalogen kommer "
 "I<inte> att visas i binärpaketets filsystemsarkiv, utan istället kommer "
 "filerna läggas i binärpaketets styrinformationsområde."
 
@@ -4530,7 +4528,7 @@ msgid ""
 "a file, the B<--nocheck> option may not be used (since B<dpkg-deb> needs to "
 "read and parse the package control file to determine which filename to use)."
 msgstr ""
-"Om den andra parametern är en katalog kommer B<dpkg-deb> skriva till filen "
+"Om den andra argumentet är en katalog kommer B<dpkg-deb> skriva till filen "
 "I<paket>B<_>I<version>B<_>I<arkitektur>B<.deb>, eller "
 "I<paket>B<_>I<version>B<.deb> om det inte finns något B<Architecture>-fält i "
 "styrfilen control. När en målkatalog anges, istället för en fil, kan inte "
@@ -6879,8 +6877,8 @@ msgid ""
 "original binary file. Each part must occur exactly once in the argument "
 "list, though the parts to not need to be listed in order."
 msgstr ""
-"Delfilerna som ges som parameter måste alla vara delar av exakt samma "
-"ursprungliga binärfil. Varje måste finnas exakt en gång i parameterlistan, "
+"Delfilerna som ges som argument måste alla vara delar av exakt samma "
+"ursprungliga binärfil. Varje måste finnas exakt en gång i argumentlistan, "
 "men de behöver inte listas i ordning."
 
 # type: Plain text
@@ -7118,7 +7116,7 @@ msgid ""
 "are replaced by B<x>'s and all other characters are discarded."
 msgstr ""
 "Misshandlar prefixet - antingen förvalet taget från indatafilnamnet, "
-"eller det som angetts som parameter: alfanumeriska tecken görs till gemener, "
+"eller det som angetts som argument: alfanumeriska tecken görs till gemener, "
 "plustecken ersätts med B<x> och alla andra tecken kastas."
 
 # type: Plain text
@@ -9245,7 +9243,7 @@ msgid ""
 "specified, defaults to the argument given to B<--exec>."
 msgstr ""
 "Tillsammans med B<--start> anger detta att processen som anges med I<sökväg> "
-"skall startas. Om den inte anges används parametern som gavs till B<--exec>."
+"skall startas. Om den inte anges används argumentet som gavs till B<--exec>."
 
 # type: TP
 #: ../../man/start-stop-daemon.8:164
@@ -9413,7 +9411,7 @@ msgstr ""
 "Flaggan kommer att få B<start-stop-daemon> att skapa filen som anges "
 "med B<--pidfile> och lägga process-id i den precis innan processen startas. "
 "Observera att den inte kommer att tas bort när programmet stoppas. "
-"B<OBSERVERA:> Denna funktion kanske inte alltid fungerar. Framförallt "
+"B<OBSERVERA:> Funktionen kanske inte alltid fungerar. Framförallt "
 "inte när programmet som startas förgrenar sig (fork) från sin huvudprocess. "
 "Därför är flaggan oftast bara användbar i samband med flaggan B<--background>."
 
