--- a/man/po/sv.po
+++ b/man/po/sv.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: dpkg man pages\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2007-07-21 16:13+0300\n"
-"PO-Revision-Date: 2007-07-29 09:20+0100\n"
+"PO-Revision-Date: 2007-07-29 09:43+0100\n"
 "Last-Translator: Peter Karlsson <peterk@debian.org>\n"
 "Language-Team: Swedish <debian-l10n-swedish@lists.debian.org>\n"
 "MIME-Version: 1.0\n"
@@ -147,6 +147,8 @@ msgid ""
 "B<Using 822-date is deprecated since> B<date>(1)  provides the same "
 "functionality when called with the B<-R>."
 msgstr ""
+"B<Det rekommenderas inte att använda 822-date eftersom> B<date>(1) "
+"tillhandahåller samma funktionalitet om det anropas med B<-R>."
 
 # type: SH
 #: ../../man/822-date.1:20 ../../man/cleanup-info.8:30 ../../man/dpkg.1:294
@@ -207,7 +209,7 @@ msgstr "SE ÄVEN"
 # type: Plain text
 #: ../../man/822-date.1:32
 msgid "I<Internet Message Format> (RFC2822), B<date>(1)."
-msgstr ""
+msgstr "I<Internet Message Format> (RFC2822), B<date>(1)."
 
 # type: SH
 #: ../../man/822-date.1:33 ../../man/cleanup-info.8:54
@@ -231,12 +233,17 @@ msgid ""
 "based on an earlier version by Ian Jackson and was also put in the public "
 "domain."
 msgstr ""
+"B<822-date> är egentligen ett enkelt skal runt B<date>(1). "
+"På grund av dess enkelhet är koden antagligen inte möjlig att "
+"upphovsrättsskydda och bör anses som allmängods. Manualsidan "
+"skrevs av Frank Lichtenheld baserad på en tidigare version av "
+"Ian Jackson och har även den släppts som allmängods."
 
 # type: TH
 #: ../../man/cleanup-info.8:1
 #, no-wrap
 msgid "cleanup-info"
-msgstr ""
+msgstr "cleanup-info"
 
 # type: TH
 #: ../../man/cleanup-info.8:1 ../../man/deb-substvars.5:2 ../../man/dpkg.1:1
@@ -253,7 +260,7 @@ msgstr "2007-07-18"
 # type: Plain text
 #: ../../man/cleanup-info.8:4
 msgid "cleanup-info - clean up the mess that bogus install-info may have done"
-msgstr ""
+msgstr "cleanup-info - städa upp oredan som en felaktig install-info kan ha skapat"
 
 # type: Plain text
 #: ../../man/cleanup-info.8:10
@@ -268,6 +275,10 @@ msgid ""
 "heading into a single one.  It tries to be smart about cases and trailing "
 "colon/spaces."
 msgstr ""
+"B<cleanup-info> är ett Perlskript som försöker städa upp den oreda en felaktig "
+"B<install-info>(8) kan ha skapat. Den samlar alla sektioner med samma "
+"rubrik till en och samma. Den försöker vara smart vad gäller stora och små "
+"bokstäver och avslutandee kolontecken/blanksteg."
 
 # type: Plain text
 #: ../../man/cleanup-info.8:21
@@ -275,6 +286,8 @@ msgid ""
 "Other clean-ups include removing of empty sections, and squeezing the blank "
 "lines (in entries part only)."
 msgstr ""
+"Annat som städas upp är att tomma sektioner tas bort och att blanka rader "
+"(endast i posterna) trycks ihop."
 
 # type: Plain text
 #: ../../man/cleanup-info.8:24
@@ -282,6 +295,8 @@ msgid ""
 "Order of sections is preserved (the first encountered section counts).  "
 "Order of entries within a section is preserved."
 msgstr ""
+"Ordningen mellan sektionerna bevaras (den först upptäckta sektionen "
+"gäller). Ordningen mellan posterna i en sektion bevaras."
 
 # type: Plain text
 #: ../../man/cleanup-info.8:29
